Code Refactor Started and In-progress